--- a/index.html
+++ b/index.html
@@ -1,82 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>QR Points Admin</title>
-  <script src="https://unpkg.com/html5-qrcode"></script>
-  <script type="module" src="firebase.js"></script>
+  <title>QR Points Tracker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family: Arial; padding: 20px; }
-    #leaderboard div { margin-bottom: 5px; }
-    input { margin: 5px; }
+    body { font-family: Arial, sans-serif; padding: 20px; max-width: 500px; margin: auto; }
+    .points { font-size: 24px; font-weight: bold; }
+    .leaderboard { margin-top: 20px; }
+    .leaderboard h3 { margin-bottom: 5px; }
+    .leaderboard ol { padding-left: 20px; }
+    .staff-controls { margin-top: 20px; }
+    button { padding: 10px; margin-right: 10px; }
   </style>
 </head>
 <body>
-  <h2>QR Scanner (Admin)</h2>
-  <div id="qr-reader" style="width:300px;"></div>
-  <p>Scanned ID: <span id="scanned-id"></span></p>
-  <p>Current Points: <span id="current-points">0</span></p>
-  <input type="number" id="points-change" placeholder="Points to Add/Deduct" />
-  <button onclick="updatePoints(true)">Add</button>
-  <button onclick="updatePoints(false)">Deduct</button>
+  <h2>Welcome, <span id="username">User</span></h2>
+  <div class="points">Points: <span id="points">0</span></div>
 
-  <h2>Leaderboard</h2>
-  <div id="leaderboard"></div>
+  <div class="staff-controls" id="staffControls" style="display:none;">
+    <button onclick="adjustPoints(5)">+5</button>
+    <button onclick="adjustPoints(-5)">-5</button>
+  </div>
 
-  <script type="module">
-    import {
-      db, doc, getDoc, updateDoc, onSnapshot, collection, query, orderBy
-    } from './firebase.js';
+  <div class="leaderboard">
+    <h3>Leaderboard</h3>
+    <ol id="leaderboardList"></ol>
+  </div>
 
-    let currentId = null;
-    const idSpan = document.getElementById('scanned-id');
-    const pointsSpan = document.getElementById('current-points');
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const userId = urlParams.get('id') || 'user1';
+    const isStaff = urlParams.get('staff') === 'true'; // Example: ?id=user1&staff=true
 
-    const qrScanner = new Html5Qrcode("qr-reader");
-    qrScanner.start(
-      { facingMode: "environment" },
-      { fps: 10, qrbox: 200 },
-      async (decodedText) => {
-        currentId = decodedText;
-        idSpan.textContent = decodedText;
-        const docRef = doc(db, "participants", currentId);
-        const snap = await getDoc(docRef);
-        if (snap.exists()) {
-          const data = snap.data();
-          pointsSpan.textContent = data.points || 0;
-        } else {
-          nameSpan.textContent = "Not found";
-          pointsSpan.textContent = "0";
-        }
-      },
-      (err) => { console.log(err); }
-    );
-
-    window.updatePoints = async function (isAdd) {
-      if (!currentId) return alert("Scan a QR first.");
-      const change = parseInt(document.getElementById("points-change").value);
-      if (isNaN(change)) return alert("Enter a valid number.");
-
-      const ref = doc(db, "participants", currentId);
-      const snap = await getDoc(ref);
-      if (!snap.exists()) return alert("Participant not found.");
-
-      const current = snap.data().points || 0;
-      const updated = isAdd ? current + change : current - change;
-
-      await updateDoc(ref, { points: updated });
-      pointsSpan.textContent = updated;
+    // Mock database
+    let users = {
+      user1: { name: 'John', points: 120 },
+      user2: { name: 'Alice', points: 180 },
+      user3: { name: 'Bob', points: 100 }
     };
 
-    const leaderboardDiv = document.getElementById("leaderboard");
+    function loadUser() {
+      const user = users[userId];
+      if (!user) return alert('User not found');
+      document.getElementById('username').textContent = user.name;
+      document.getElementById('points').textContent = user.points;
 
-    const q = query(collection(db, "participants"), orderBy("points", "desc"));
-    onSnapshot(q, (snapshot) => {
-      leaderboardDiv.innerHTML = "";
-      snapshot.forEach((docSnap, idx) => {
-        const d = docSnap.data();
-        leaderboardDiv.innerHTML += `<div>${idx + 1}. ${d.name || 'Unnamed'} - ${d.points} pts</div>`;
-      });
-    });
+      if (isStaff) {
+        document.getElementById('staffControls').style.display = 'block';
+      }
+
+      loadLeaderboard();
+    }
+
+    function adjustPoints(amount) {
+      users[userId].points += amount;
+      document.getElementById('points').textContent = users[userId].points;
+      loadLeaderboard();
+    }
+
+    function loadLeaderboard() {
+      const sortedUsers = Object.entries(users).sort((a, b) => b[1].points - a[1].points);
+      const list = document.getElementById('leaderboardList');
+      list.innerHTML = '';
+      for (const [id, data] of sortedUsers) {
+        const li = document.createElement('li');
+        li.textContent = `${data.name} – ${data.points} pts`;
+        list.appendChild(li);
+      }
+    }
+
+    loadUser();
   </script>
 </body>
 </html>
