--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 <script>
   // TODO: Replace with your Firebase config
  const firebaseConfig = {
-  apiKey: "AIzaSyAQRlEQ2L7A9v7MS2GIaHZOW9wuYXDm7QE",
-  authDomain: "tryy-b74cd.firebaseapp.com",
-  databaseURL: "https://tryy-b74cd-default-rtdb.asia-southeast1.firebasedatabase.app",
-  projectId: "tryy-b74cd",
-  storageBucket: "tryy-b74cd.firebasestorage.app",
-  messagingSenderId: "593722631127",
-  appId: "1:593722631127:web:ca15d9425f7fbdeb732192"
+  apiKey: "AIzaSyDaRLmnE2t8v_bXtm_r_RrnuMhtJBfomug",
+  authDomain: "test2-74b30.firebaseapp.com",
+  databaseURL: "https://test2-74b30-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "test2-74b30",
+  storageBucket: "test2-74b30.firebasestorage.app",
+  messagingSenderId: "776427276353",
+  appId: "1:776427276353:web:0c7285a031ff3271069ec0"
 };
 
   firebase.initializeApp(firebaseConfig);
